{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 57,
  "lineage": "2b915da3-566b-a092-18e6-770b1c9899b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "siemplicity_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:internet-gateway/igw-03fa4453654ca1f14",
            "id": "igw-03fa4453654ca1f14",
            "owner_id": "214549340906",
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-igw",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:route-table/rtb-0aa68f0861a5aaba4",
            "id": "rtb-0aa68f0861a5aaba4",
            "owner_id": "214549340906",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-private-rt",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:route-table/rtb-05f8abf37963a9039",
            "id": "rtb-05f8abf37963a9039",
            "owner_id": "214549340906",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fa4453654ca1f14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-public-rt",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.siemplicity_igw",
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b481b357fe57361",
            "route_table_id": "rtb-0aa68f0861a5aaba4",
            "subnet_id": "subnet-0e470f7fc4af21ca7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0497fc8cf62e53a50",
            "route_table_id": "rtb-0aa68f0861a5aaba4",
            "subnet_id": "subnet-012c8cbe190a0af26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1681142a4fd042f",
            "route_table_id": "rtb-05f8abf37963a9039",
            "subnet_id": "subnet-0f8f059add6ed52e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.siemplicity_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcdb9ef19b9eabf9",
            "route_table_id": "rtb-05f8abf37963a9039",
            "subnet_id": "subnet-0902dde80657eaac2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.siemplicity_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "quarantine_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:security-group/sg-03ae7faab295ecde9",
            "description": "Restricts all inbound/outbound traffic for isolated instances",
            "egress": [],
            "id": "sg-03ae7faab295ecde9",
            "ingress": [],
            "name": "siemplicity-quarantine-sg",
            "name_prefix": "",
            "owner_id": "214549340906",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-quarantine-sg",
              "Purpose": "Containment"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-quarantine-sg",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "Containment",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:subnet/subnet-0e470f7fc4af21ca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e470f7fc4af21ca7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214549340906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-private-a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-private-a",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:subnet/subnet-012c8cbe190a0af26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012c8cbe190a0af26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214549340906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-private-b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-private-b",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:subnet/subnet-0f8f059add6ed52e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8f059add6ed52e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214549340906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-public-a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-public-a",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:subnet/subnet-0902dde80657eaac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0902dde80657eaac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214549340906",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-public-b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-public-b",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            },
            "vpc_id": "vpc-0be0a0b29369664db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.siemplicity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "siemplicity_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214549340906:vpc/vpc-0be0a0b29369664db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01670d80ffa3d1af8",
            "default_route_table_id": "rtb-0ba13b85330c6eda4",
            "default_security_group_id": "sg-012578477958a1216",
            "dhcp_options_id": "dopt-0bffd8de8cd3ddd26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be0a0b29369664db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba13b85330c6eda4",
            "owner_id": "214549340906",
            "tags": {
              "Environment": "dev",
              "Name": "siemplicity-vpc",
              "Project": "SIEMplicity"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "siemplicity-vpc",
              "Owner": "Latrisha Dodson",
              "Project": "SIEMplicity",
              "Purpose": "VPC Infrastructure for SIEM/SOC Operations",
              "Role": "Data Quarantine Architect",
              "Team": "SOC-SIEM"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}